Fix another z-index of export panel.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,7 +239,7 @@ small { font-size:11px; }
   margin-left:-361px;
   width:720px;
   height:90%;
-  z-index:101;
+  z-index:102;
   border:1px solid #666;
   border-bottom:0px;
   border-radius:5px 5px 0px 0px;
